# Nebula-API

./: Cargo.toml  README.md
src/: main.rs
src/handlers/: mod.rs
src/handlers/auth/: discriminator.rs  email.rs  mod.rs  password.rs  token.rs  user.rs
src/handlers/database/: mod.rs  pool.rs
src/models/: mod.rs
src/models/auth/: handlers.rs  mod.rs  route.rs
src/routes/: mod.rs
src/routes/auth/: login.rs  mod.rs  register.rs
src/routes/health/: api.rs  mod.rs
