[package]
name = "nebula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.3", features = [ "runtime-actix-native-tls", "postgres", "chrono" ]}
actix-web = "4.3.1"
serde = "1.0.163"
chrono = "0.4.24"
rand = "0.8.5"
ring = "0.16.20"
data-encoding = "2.4.0"
fancy-regex = "0.11.0"